// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Component For Add Cart should take snapshot for add cart item 1`] = `
<div
  class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 grid w-full grid-cols-1 items-start gap-y-8 gap-x-6 sm:grid-cols-12 lg:gap-x-8 my-10"
>
  <div
    class="aspect-w-2 aspect-h-3 overflow-hidden rounded-lg bg-gray-100 sm:col-span-2 lg:col-span-3"
  >
    <img
      alt="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops"
      class="object-cover object-center"
      src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
    />
  </div>
  <div
    class="sm:col-span-10 lg:col-span-9 grid h-full"
  >
    <h2
      class="text-2xl font-bold text-gray-900 sm:pr-12"
    >
      Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
    </h2>
    <section
      aria-labelledby="information-heading"
      class="mt-2"
    >
      <h3
        id="information-heading"
      >
        Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday
      </h3>
      <p
        class="text-2xl text-gray-900"
        data-testid="price"
      >
        ₹109.95
      </p>
      <div
        class="mt-6"
      >
        <h4
          class="sr-only"
        >
          Reviews
        </h4>
        <div
          class="flex items-center"
        >
          <div
            class="flex items-center"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900 text-gray-200"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p
            class="sr-only"
          >
            3.9
             out of 5 stars
          </p>
          <a
            class="ml-3 text-sm font-medium text-indigo-600 hover:text-indigo-500"
            href="/"
          >
            120
             reviews
          </a>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="options-heading"
      class="mt-4"
    >
      <button
        class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 py-3 px-8 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 disabled:bg-slate-500 disabled:cursor-wait"
        type="button"
      >
        Add to bag
      </button>
    </section>
  </div>
</div>
`;

exports[`Product Component For Update Cart should render Update Product Component 1`] = `
<div
  class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 grid w-full grid-cols-1 items-start gap-y-8 gap-x-6 sm:grid-cols-12 lg:gap-x-8 my-10"
>
  <div
    class="aspect-w-2 aspect-h-3 overflow-hidden rounded-lg bg-gray-100 sm:col-span-2 lg:col-span-3"
  >
    <img
      alt="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops"
      class="object-cover object-center"
      src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
    />
  </div>
  <div
    class="sm:col-span-10 lg:col-span-9 grid h-full"
  >
    <h2
      class="text-2xl font-bold text-gray-900 sm:pr-12"
    >
      Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
    </h2>
    <section
      aria-labelledby="information-heading"
      class="mt-2"
    >
      <h3
        id="information-heading"
      >
        Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday
      </h3>
      <p
        class="text-2xl text-gray-900"
        data-testid="price"
      >
        ₹109.95
      </p>
      <div
        class="mt-6"
      >
        <h4
          class="sr-only"
        >
          Reviews
        </h4>
        <div
          class="flex items-center"
        >
          <div
            class="flex items-center"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="h-5 w-5 flex-shrink-0 text-gray-900 text-gray-200"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p
            class="sr-only"
          >
            3.9
             out of 5 stars
          </p>
          <a
            class="ml-3 text-sm font-medium text-indigo-600 hover:text-indigo-500"
            href="/"
          >
            120
             reviews
          </a>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="options-heading"
      class="mt-4"
    >
      <div
        class="flex items-center"
      >
        <button
          class="flex flex-1 w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 py-3 px-8 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 disabled:bg-slate-500 disabled:cursor-wait"
          type="button"
        >
          +
        </button>
        <p
          class="flex-1 text-2xl font-bold text-center"
        >
          1
        </p>
        <button
          class="flex flex-1 w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 py-3 px-8 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2  disabled:bg-slate-500 disabled:cursor-wait"
          type="button"
        >
          -
        </button>
      </div>
    </section>
  </div>
</div>
`;
